<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">PopularMoviesStage2</string>
    <string name="popular_movies_title">Sort by Most Popular Movies</string>
    <string name="highest_rated_movies_title">Sort by Highest Rated Movies</string>
    <string name="unknown_release_date">Unknown Release Date</string>
    <string name="unknown_plot_synopsis">Unknown Plot Synopsis</string>
    <string name="mark_as_favorite_button_text">Mark as favorite</string>
    <string name="image_poster">Image Poster</string>
    <string name="popularity_sort">popular</string>
    <string name="highest_rate_sort">top_rated</string>
    <string name="sort_type">sort_type</string>
    <string name="error_get_data">There was an error while getting the posters.</string>
    <string name="intent_tag_extra">movie_extra</string>
    <string name="JSON_root">results</string>
    <string name="movie_id">id</string>
    <string name="movie_title">title</string>
    <string name="movie_synopsis">overview</string>
    <string name="movie_rating">vote_average</string>
    <string name="movie_release_date">release_date</string>
    <string name="movie_poster_path">poster_path</string>
    <string name="error_no_internet">There is no internet connection.</string>
    <string name="grid_item">Grid Item</string>
    <string name="trailers_label">Trailers</string>
    <string name="reviews_label">Reviews</string>
    <string name="trailer_item">Trailer %1$s</string>
    <string name="no_reviews_message">There are no reviews for this movie.</string>
    <string name="query_total_results">total_results</string>
    <string name="author_of_review">author</string>
    <string name="content_of_review">content</string>
    <string name="trailer_video_key">key</string>
    <string name="trailers_param">videos</string>
    <string name="reviews_param">reviews</string>
    <string name="review_written_by">Written by %1$s:</string>
    <string name="remove_favorite">Remove from favorites</string>
    <string name="favorites_movies_title">Sort by Favorites Movies</string>
    <string name="type_adapter_param">type_adapter</string>
    <string name="type_adapter_value_api">api_connection</string>
    <string name="type_adapter_value_loader">loader_sync</string>
    <string name="no_favorites_message">"There are no movie in your favorites collection yet"</string>
    <string name="play_trailer_button">Play 1st Trailer</string>
    <string name="share_button">Share Trailer URL</string>
</resources>
