<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <ImageView
            android:contentDescription="@string/play_trailer_button"
            android:layout_weight="1"
            android:id="@+id/iv_trailer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:src="@mipmap/ic_play_arrow_black_48dp" />

        <TextView
            android:layout_weight="2"
            android:id="@+id/tv_trailer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            tools:text="@string/trailer_item" />

        <ImageView
            android:contentDescription="@string/share_button"
            android:layout_gravity="center"
            android:id="@+id/iv_share"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:src="@mipmap/ic_share_black_36dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#FF00FF00" />
</LinearLayout>

