<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dbm.popularmoviesstage2.DetailActivity">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:padding="28dp"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                tools:text="Movie Title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/poster_image_iv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image_poster"
                    android:padding="30dp"
                    tools:src="@drawable/sample_1" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/movie_release_date_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp"
                        android:paddingBottom="8dp"
                        android:textSize="26sp"
                        tools:text="Release Date" />

                    <TextView
                        android:id="@+id/movie_rating_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp"
                        android:paddingBottom="8dp"
                        android:textSize="22sp"
                        tools:text="Rating" />

                    <Button
                        android:id="@+id/mark_as_favorite_button"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp"
                        android:backgroundTint="#64FFDA"
                        tools:text="@string/mark_as_favorite_button_text"
                        android:textColor="#282828"
                        android:textSize="12sp" />

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/movie_plot_synopsis_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="20sp"
                tools:text="Plot Synopsis" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#FF00FF00" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/trailers_label"
                android:textSize="26sp"
                android:textStyle="bold|italic" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/reviews_label"
                android:textSize="26sp"
                android:textStyle="bold|italic" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false" />

                <TextView
                    android:id="@+id/empty_text_view_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/no_reviews_message" />

            </FrameLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:layout_gravity="center"
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:gravity="center_vertical|center_horizontal"
        tools:text="No internet"
        android:id="@+id/empty_text_view_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>

